--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "0.4.3"
   },
   "dependencies": {
+    "material-ui": "^0.15.4",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-list": "^0.8.0",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
